@@ -421,6 +421,7 @@ int main(
 
   void	 ping_nodes A_((struct work_task *ptask));
   void   check_nodes A_((struct work_task *ptask));
+  void   check_log A_((struct work_task *ptask));
 
   static struct {
     char *it_name;
@@ -781,6 +782,7 @@ int main(
 
   log_open(log_file,path_log);
 
+
   sprintf(log_buffer,msg_startup1,server_name,server_init_type);
 
   log_event(
@@ -953,6 +955,9 @@ int main(
   /* Just check the nodes with check_nodes above and don't ping anymore. */
 
   set_task(WORK_Timed,time_now+5,ping_nodes,NULL); 
+  
+
+  set_task(WORK_Immed, time_now + 5, check_log, NULL);
 
   /*
    * Now at last, we are ready to do some batch work.  The
@@ -1051,6 +1056,7 @@ int main(
 
     if (!getenv("PBSLOGLEVEL"))
       LOGLEVEL = server.sv_attr[(int)SRV_ATR_LogLevel].at_val.at_long;
+    
 
     /* any running jobs need a status update? */ 
 
@@ -1142,6 +1148,35 @@ int main(
   }  /* END main() */
 
 
+void   check_log(
+   struct work_task *ptask)
+   {
+   int depth = 0;
+
+   if (server.sv_attr[(int)SRV_ATR_LogFileMaxSize].at_flags 
+       & ATR_VFLAG_SET != 0)
+      {
+      if (log_size() 
+            >=  server.sv_attr[(int)SRV_ATR_LogFileMaxSize].at_val.at_long)
+         {
+         log_event(
+         PBSEVENT_SYSTEM | PBSEVENT_FORCE,
+         PBS_EVENTCLASS_SERVER,
+         msg_daemonname,
+         "Rolling log file");
+
+         if (server.sv_attr[(int)SRV_ATR_LogFileRollDepth].at_flags 
+             & ATR_VFLAG_SET != 0)
+           {
+           depth = server.sv_attr[(int)SRV_ATR_LogFileRollDepth].at_val.at_long;
+           if (depth < 1)
+              depth = 1;
+           }
+         log_roll(depth);
+         }
+      }
+   set_task(WORK_Timed,time_now + 300, check_log, NULL);   
+   } /* END check_log */
 
 
 
